<resources>
    <string name="adjust_token" translatable="false">ah627r5k7h8g</string>
    <string name="facebook_client_token" translatable="false">be548554833e5f125df6a3766eee82c1</string>
    <string name="facebook_app_id" translatable="false">1323775516234142</string>
    <string name="tiktok_token" translatable="false">6g8afu</string>
    <string name="app_name1">IPTV</string>
    <string name="app_name3">IPTV: Online Live Player</string>
    <string name="app_name">Online Live Player</string>
    <string name="recently_watched">Recently Watched</string>
    <string name="notfound">Privacy policy not found..!!</string>
    <string name="openurl">No browser found to open the URL.</string>
    <string name="error_url">Error opening URL</string>
    <string name="please_select_at_least_one_star_to_rate">Please select at least one star to rate.</string>
    <string name="we_are_working_hard_for_better_user_experience">We Are Working Hard For Better User Experience</string>
    <string name="rate_apps_txt_1">Rate For Us</string>
    <string name="rate_apps_txt_2">How Would You Rate in App Experience?</string>
    <string name="best_txt">The best we can get :)</string>
    <string name="rate_no">Later</string>
    <string name="rate_yes">Rate</string>
    <string name="exit_app">Exit App?</string>
    <string name="this_action_may_contain_ads">This action may contain Ads…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="smart_live_tv">Smart Live TV</string>
    <string name="iptv_smart_player_lets_you_stream_live_tv_movies_amp_shows_from_your_iptv_provider_in_one_seamless_app"><![CDATA[IPTV Smart Player lets you stream live TV, movies, & shows from your IPTV provider in one seamless app.]]></string>
    <string name="welcome_to_iptv_streamings">Welcome to IPTV Streamings</string>
    <string name="enjoy_your_favorite_channels_with_smooth_and_easy_streaming">Enjoy your favorite channels with smooth and easy streaming.</string>
    <string name="stream_live_channels">Stream Live Channels</string>
    <string name="access_live_channels_instantly_with_smooth_streaming">Access live channels instantly with smooth streaming.</string>
    <string name="cast_your_tv">Cast your TV</string>
    <string name="connect_and_stream_your_favorite_content_on_a_larger_screen">Connect and stream your favorite content on a larger screen.</string>
    <string name="smooth_to_use">Smooth to Use</string>
    <string name="experience_fluid_controls_and_smooth_performance_every_time">Experience fluid controls and smooth performance every time.</string>
    <string name="screen_mirroring">Screen Mirroring</string>
    <string name="category">Category</string>
    <string name="channel_list">Channel List</string>
    <string name="import_uri">Import Url</string>
    <string name="next">Next</string>
    <string name="set_language">Set Languages</string>
    <string name="home">Home</string>
    <string name="channel">Channel</string>
    <string name="favorite">Favorites</string>
    <string name="history">History</string>
    <string name="smart_tv">Smart TV</string>
    <string name="direct">Direct</string>
    <string name="step_1_connect_to_same_wifi">Step : 1 Connect to Same WiFi</string>
    <string name="make_sure_your_phone_and_smart_tv_are_connected_to_the_same_wifi_network">Make sure your phone and Smart TV are connected to the same WiFi network.</string>
    <string name="step_2_open_cast_app">Step : 2 Open Cast App</string>
    <string name="open_your_cast_to_tv_screen_mirroring_app_on_your_phone">Open your Cast to TV / Screen Mirroring app on your phone.</string>
    <string name="step_3_tap_start_mirroring_or_cast">Step : 3 Tap “Start Mirroring” or “Cast”</string>
    <string name="tap_on_start_mirroring_cast_screen_connect_button">Tap on Start Mirroring / Cast Screen / Connect button.</string>
    <string name="step_4_select_your_tv">Step : 4 Select Your TV</string>
    <string name="your_app_will_scan_and_show_available_devices_n_tap_your_smart_tv_name_from_the_list">Your app will scan and show available devices. \n👉 Tap your Smart TV name from the list.</string>
    <string name="step_5_allow_permission_on_tv">Step : 5 Allow Permission on TV</string>
    <string name="some_tvs_will_show_a_popup_n_click_allow_accept_on_your_tv">Some TVs will show a popup. \n👉 Click Allow / Accept on your TV.</string>
    <string name="step_6_start_casting">Step : 6 Start Casting</string>
    <string name="your_phone_screen_or_content_will_now_appear_on_the_tv">Your phone screen or content will now appear on the TV 🎉</string>
    <string name="please_connect_to_your_tv">Please Connect to your TV</string>
    <string name="tap_the_start_mirroring_button_to_begin_screen_mirroring">Tap the Start Mirroring button to begin screen Mirroring</string>
    <string name="sound">Sound</string>
    <string name="start_mirroring">Start Mirroring</string>
    <string name="player_video">Player Channel</string>
    <string name="channel_name">Channel Name</string>
    <string name="playlist_category_name">Playlist: Category Name</string>
    <string name="up_next">Up Next</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_check_your_network_and_try_again">Please check your network and try again</string>
    <string name="open_wi_fi_setting">Open Wi-Fi Setting</string>
    <string name="exit">Exit!</string>
    <string name="have_a_nice_day">Have a Nice Day</string>
    <string name="are_you_sure_you_want_to_close_the_app">Are you sure, You want to close the app?</string>
    <string name="cancel">Cancel</string>
    <string name="exit12">Exit</string>
    <string name="channels">Channels</string>
    <string name="search_channel_name">Search channel name...</string>
    <string name="no_channel_found">No Channel Found</string>
    <string name="no_favorite_found">Nothing in your favorite right now</string>
    <string name="no_history_found">No History Found</string>
    <string name="no_playlist_found">No Playlist Found</string>
    <string name="rate_now">Rate Now</string>
    <string name="add_playlist">Add Playlist</string>
    <string name="add_channel_to_playlist">Add Channel to playlist</string>
    <string name="setting">Setting</string>
    <string name="iptv_smart">IPTV Smart</string>
    <string name="cast_to_tv">Cast to TV</string>
    <string name="playlist_channel_uri">Playlist Channel URL</string>
    <string name="language">Language</string>
    <string name="choose_language">Choose Language</string>
    <string name="english">English</string>
    <string name="rate_us">Rate Us</string>
    <string name="rate_this_app">Rate this App</string>
    <string name="general">General</string>
    <string name="share_app">Share App</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="read_our_policy">Read Our Policy</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="read_our_terms">Read our Terms</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="enter_playlist_name">Enter Playlist Name</string>
    <string name="url">URL</string>
    <string name="http_iptv_org_github_io_iptv_categories">http://iptv.org.github.io/iptv/categories</string>
    <string name="please_enter_playlist_name">Please enter playlist name</string>
    <string name="please_select_a_file_or_enter_url">Please select a file or enter URL</string>
    <string name="playlist_name_already_exists">Playlist name already exists</string>
    <string name="playlist_added_successfully">Successfully!</string>
    <string name="file_selected">"File Selected: "</string>
    <string name="not_support_this_type_of_file_please_select_an_m3u_file">Not support this type of file. Please select an M3U or M3U8 file</string>
    <string name="invalid_file_type_only_m3u_is_supported">Invalid file type. Only M3U is supported.</string>
    <string name="get_start">Start</string>
    <string name="this_playlist_name_or_file_is_already_added">This playlist name or file is already added!</string>
    <string name="this_file_is_already_added">This file is already added!</string>
    <string name="permission_needed">Permission Needed</string>
    <string name="storage_permission_is_required_to_read_m3u_files_from_your_device">Storage permission is required to read M3U files from your device.</string>
    <string name="allow">Allow</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="permission_required">Permission Required</string>
    <string name="you_have_denied_permission_permanently_please_enable_it_from_app_settings_to_select_files">You have denied permission permanently. Please enable it from App Settings to select files.</string>
    <string name="settings">Settings</string>
    <string name="connecting_to_smart_tv">Connecting to Smart TV...</string>
    <string name="searching_for_direct_miracast">Searching for Direct Miracast...</string>
    <string name="sound_enabled">Sound Enabled</string>
    <string name="sound_disabled">Sound Disabled</string>
    <string name="mirroring_not_supported_on_this_device">Mirroring not supported on this device</string>
    <string name="link_error_skipping_to_next">Link error, skipping to next...</string>
    <string name="playing">"Playing: "</string>
    <string name="of">" of "</string>
    <string name="playlist_ended">Playlist Ended</string>
    <string name="check_out_this_iptv_online_live_player">Check out this IPTV Online Live Player:\n\n</string>
    <string name="channel1">"📺 Channel: "</string>
    <string name="stream_link">"🔗 Stream Link: "</string>
    <string name="enjoy_live_streaming">Enjoy live streaming!</string>
    <string name="added_to_favorites">Added to Favorites</string>
    <string name="removed_from_favorites">Removed from Favorites</string>
    <string name="check_your_internet_connection">Check Your Internet Connection</string>
    <string name="you_don_t_have_google_play_installed">You don\'t have Google Play installed</string>
    <string name="playlist">Playlist</string>
    <string name="imported">Imported!</string>
    <string name="failed_to_save_data">Failed to save data!</string>
    <string name="no_valid_channels_found_in_file">No valid channels found in file!</string>
    <string name="error">"Error: "</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="choose_file">Choose File</string>
    <string name="streaming_status">Streaming Status</string>
    <string name="live_high_quality">Live / High Quality</string>
    <string name="choose_your_language">Choose your Language</string>
    <string name="server_error">"Server error: "</string>
    <string name="this_url_has_already_ben_added">This URL has already ben added</string>
    <string name="done">Done</string>
    <string name="app_not_working_properly">App not working properly?</string>
    <string name="poor_video_quality">Poor video quality</string>
    <string name="channels_not_loading">Channels not loading</string>
    <string name="update_the_app_to_the_latest_version">Update the app to the latest version</string>
    <string name="too_many_bugs">Too many bugs</string>
    <string name="uninstall">Uninstall</string>
    <string name="performance_excellence_n_certified">Performance Excellence\n Certified</string>
    <string name="uninterrupted_streaming_instantly_n_restored">Uninterrupted streaming, instantly\n restored</string>
    <string name="try_again">Try Again</string>
    <string name="still_want_to_uninstall">Still want to uninstall</string>
    <string name="importing_playlist_please_wait">Importing playlist, please wait...</string>
    <string name="too_many_ads">Too many ads</string>
</resources>