<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
       >

        <ImageView
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/back" />


    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:overScrollMode="never"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"

            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_center"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_app_issue_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_text_semibold"
                android:text="@string/app_not_working_properly"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/rg_survey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginVertical="@dimen/_5sdp">

                <RadioButton
                    android:id="@+id/rb_quality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_text_medium"
                    android:layoutDirection="rtl"
                    android:text="@string/poor_video_quality"
                    android:textColor="#2B2B2B"
                    android:textSize="15sp" />
                <RadioButton
                    android:id="@+id/rb_ads"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_text_medium"
                    android:layoutDirection="rtl"
                    android:checked="true"
                    android:text="@string/too_many_ads"
                    android:textColor="#2B2B2B"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/rb_loading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_text_medium"
                    android:layoutDirection="rtl"
                    android:text="@string/channels_not_loading"
                    android:textColor="#2B2B2B"

                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/rb_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_text_medium"
                    android:layoutDirection="rtl"
                    android:text="@string/update_the_app_to_the_latest_version"
                    android:textColor="#2B2B2B"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/rb_bugs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_text_medium"
                    android:layoutDirection="rtl"
                    android:text="@string/too_many_bugs"


                    android:textColor="#2B2B2B"
                    android:textSize="15sp" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_pro_text_bold"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_uninstall"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_borderfill_box_hover"
                    android:fontFamily="@font/sf_pro_text_bold"
                    android:text="@string/uninstall"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <FrameLayout
        android:id="@+id/layoutAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent">

        <FrameLayout
            android:id="@+id/fr_ads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent">

            <include
                android:id="@+id/adShimmer"
                layout="@layout/ad_shimmer_native_ad_large" />
        </FrameLayout>
    </FrameLayout>
</LinearLayout>